--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest"
